# mykai-node

./: .gitignore  BUILD.md  build.ps1  package.json
.github/workflows/: build.yml
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: autostart.rs  commands.rs  config.rs  heartbeat.rs  kaspad_manager.rs  main.rs  rpc_client.rs
